--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "jquery": "^3.7.1",
+    "nodemailer": "^7.0.5",
     "pinia": "^3.0.3",
     "popper.js": "^1.16.1",
     "vue": "^3.5.13",
