--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "jquery": "^3.7.1",
     "nodemailer": "^7.0.5",
     "pinia": "^3.0.3",
