--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.5",
     "pinia": "^3.0.3",
     "popper.js": "^1.16.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
