--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.5",
@@ -23,6 +23,7 @@
     "popper.js": "^1.16.1",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
